# rust_2d_platform

./: Cargo.toml  Makefile  README.md  build.rs  todo.txt
art_samples/: hero_gen.py
assets/maps/: r0_0.map.ron  r0_1.map.ron  r0_2.map.ron  r1_0.map.ron  r1_1.map.ron  r1_2.map.ron  r2_0.map.ron  r2_1.map.ron  r2_2.map.ron  r3_0.map.ron  r3_1.map.ron  r3_2.map.ron
assets/music/: CREDITS.md
src/: anim.rs  audio.rs  boss.rs  camera.rs  combat.rs  editor.rs  glyph.rs  hazards.rs  health.rs  input.rs  main.rs  menu.rs  movers.rs  physics.rs  player.rs  ron.rs  save.rs  scenery.rs  state.rs  stats.rs  world.rs  worldmap.rs
tools/: gen_chest.py  gen_player_poses.py  gen_scenery.py  gen_sfx.py
